--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,9 +7,9 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="15dp"
     tools:context=".Login">
 
+    <!--judul login-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,10 +19,12 @@
         android:textSize="25sp"
         android:textStyle="bold" />
 
+    <!--input login-->
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="25dp">
+        <!--input text loginnya-->
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email"
             android:layout_width="match_parent"
@@ -31,9 +33,11 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!--ini yg password-->
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="25dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
@@ -43,26 +47,33 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!--buat loding-->
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone" />
 
+    <!--buat button login-->
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/login" />
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/primary"
+        android:text="@string/login"
+        android:textStyle="bold" />
 
+    <!--buat textview buat register-->
     <TextView
         android:id="@+id/registerNow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/click_to_register"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textColor="@color/accent"
+        android:textSize="15sp" />
 
 </LinearLayout>
