--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="home"
+    <item
         android:id="@+id/home"
-        android:icon="@drawable/home"/>
-    <item android:title="kalender"
+        android:icon="@drawable/home"
+        android:title="@string/home" />
+    <item
         android:id="@+id/kalender"
-        android:icon="@drawable/calendar"/>
-    <item android:title="plant"
+        android:icon="@drawable/calendar"
+        android:title="@string/calendar" />
+    <item
         android:id="@+id/plant"
-        android:icon="@drawable/plant"/>
-    <item android:title="profile"
+        android:icon="@drawable/plant"
+        android:title="@string/plant" />
+    <item
         android:id="@+id/profile"
-        android:icon="@drawable/profile"/>
+        android:icon="@drawable/profile"
+        android:title="@string/profile" />
 </menu>
