--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
+    <color name="primary">#76984B</color>
+    <color name="secondary">#F2EED7</color>
+    <color name="dark_primary">#67864A</color>
+    <color name="offwhite">#FCFAEE</color>
+    <color name="black_neutral">#252525</color>
+    <color name="putih">#F5F5F5</color>
+    <color name="accent">#007AFF</color>
+    <color name="red">#EE0D00</color>
+
 </resources>
