--- a/app/src/main/res/layout/fragment_plant_storage.xml
+++ b/app/src/main/res/layout/fragment_plant_storage.xml
@@ -3,15 +3,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_700"
     tools:context=".Plant_Storage">
 
-    <!-- INI NANTI DI UPDATE STORAGE NYA -->
     <TextView
+        android:id="@+id/judulstr"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="@string/plants"
+        android:textSize="40sp"
+        android:textStyle="bold" />
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Plant_Storage Fragment"
-        android:textSize="26dp" />
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/tanaman"
+            android:layout_width="350dp"
+            android:layout_height="200dp"
+            android:src="@drawable/plant1"
+            android:layout_gravity="center"
+            />
+
+        <TextView
+            android:id="@+id/namaTanaman"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tanaman"
+            android:textSize="25sp"
+            android:layout_gravity="center"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Plant"
+        android:id="@+id/addPlant"
+        android:layout_marginBottom="50dp"
+        android:backgroundTint="@color/dark_primary"
+        android:layout_gravity="bottom|center"
+        />
 
 </FrameLayout>
