--- a/app/src/main/res/layout/fragment_plant_storage.xml
+++ b/app/src/main/res/layout/fragment_plant_storage.xml
@@ -14,39 +14,20 @@
         android:textSize="40sp"
         android:textStyle="bold" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/image_recycler_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/judulstr"
         android:layout_gravity="center"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/tanaman"
-            android:layout_width="350dp"
-            android:layout_height="200dp"
-            android:src="@drawable/plant1"
-            android:layout_gravity="center"
-            android:contentDescription="@string/tanaman"
-            />
-
-        <TextView
-            android:id="@+id/namaTanaman"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tanaman"
-            android:textSize="25sp"
-            android:layout_gravity="center"
-            android:textStyle="bold" />
-    </LinearLayout>
+        android:layout_marginTop="10dp" />
 
     <Button
+        android:id="@+id/addPlant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_plant"
-        android:id="@+id/addPlant"
-        android:layout_marginBottom="50dp"
-        android:backgroundTint="@color/dark_primary"
         android:layout_gravity="bottom|center"
-        />
-
+        android:layout_marginBottom="50dp"
+        android:backgroundTint="@color/dark_primary" />
 </FrameLayout>
