--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     tools:context=".Registration">
 
-    <!--judul register-->
+    <!-- Judul Register -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,13 +19,12 @@
         android:textSize="25sp"
         android:textStyle="bold" />
 
-    <!--input register-->
+    <!-- Input Email -->
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="25dp">
 
-        <!--input text email-->
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email"
             android:layout_width="match_parent"
@@ -34,29 +33,30 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!--ini yg password-->
+    <!-- Input Password -->
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="25dp">
+        android:paddingHorizontal="25dp"
+        app:passwordToggleEnabled="true">
 
-        <!--input passwordnya-->
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/password" />
+            android:hint="@string/password"
+            android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!--buat loding-->
+    <!-- Progress Bar -->
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone" />
 
-    <!--buat button register-->
+    <!-- Tombol Register -->
     <Button
         android:id="@+id/btn_register"
         android:layout_width="match_parent"
@@ -64,17 +64,36 @@
         android:layout_marginHorizontal="25dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/primary"
-        android:text="@string/register" />
+        android:text="@string/register"
+        android:textStyle="bold" />
 
-    <!--buat textview buat login-->
-    <TextView
-        android:id="@+id/loginNow"
+    <!-- Text untuk Login -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:gravity="center"
-        android:text="@string/click_to_login"
-        android:textColor="@color/accent"
-        android:textSize="15sp" />
+        android:orientation="horizontal">
+
+        <!-- Text "Already Have an account?" -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Already have account"
+            android:textColor="@android:color/black"
+            android:textSize="15sp" />
+
+        <!-- Text "Login here" -->
+        <TextView
+            android:id="@+id/loginNow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="Login here"
+            android:textColor="@color/accent"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
 </LinearLayout>
