--- a/app/src/main/res/layout/activity_forgor.xml
+++ b/app/src/main/res/layout/activity_forgor.xml
@@ -9,22 +9,22 @@
     android:orientation="vertical"
     tools:context=".Login">
 
-    <!--judul login-->
+    <!--judul forgor-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:gravity="center"
-        android:text="@string/login"
+        android:text="@string/forgot_password"
         android:textSize="25sp"
         android:textStyle="bold" />
 
-    <!--input login-->
+    <!--input email-->
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="25dp">
-        <!--input text loginnya-->
+        <!--input text email-->
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email"
             android:layout_width="match_parent"
@@ -33,33 +33,6 @@
             android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!--ini yg password-->
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="25dp"
-        app:passwordToggleEnabled="true">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/password"
-            android:inputType="textPassword" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <!--buat textview buat forgot password-->
-    <TextView
-        android:id="@+id/forgor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="25dp"
-        android:gravity="end"
-        android:text="@string/forgot_password"
-        android:textColor="@color/accent"
-        android:textSize="15sp" />
-
     <!--buat loding-->
     <ProgressBar
         android:id="@+id/progressBar"
@@ -67,28 +40,44 @@
         android:layout_height="wrap_content"
         android:visibility="gone" />
 
-    <!--buat button login-->
+    <!--buat button forgor-->
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_forgor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="25dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/primary"
-        android:text="@string/login"
+        android:text="@string/submit"
         android:textStyle="bold" />
 
-    <!--buat textview buat register-->
-    <TextView
-        android:id="@+id/registerNow"
+    <!-- Text untuk Login -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-
+        android:layout_marginTop="30dp"
         android:gravity="center"
-        android:text="@string/click_to_register"
-        android:textColor="@color/accent"
-        android:textSize="15sp"
-        android:textStyle="bold" />
+        android:orientation="horizontal">
+
+        <!-- Text "Already Have an account?" -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/already_have_account"
+            android:textColor="@android:color/black"
+            android:textSize="15sp" />
+
+        <!-- Text "Login here" -->
+        <TextView
+            android:id="@+id/loginNow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="@string/login_here"
+            android:textColor="@color/accent"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
 </LinearLayout>
