--- a/app/src/main/res/layout/item_plant_image.xml
+++ b/app/src/main/res/layout/item_plant_image.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:layout_margin="8dp"
+    app:cardElevation="8dp"
+    app:cardCornerRadius="12dp"
+    android:layout_gravity="center">
 
     <ImageView
         android:id="@+id/plant_image"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_width="295dp"
+        android:layout_height="160dp"
+        android:layout_margin="10dp"
         android:scaleType="centerCrop"
-        android:contentDescription="@string/tanaman" />
-</LinearLayout>
+        android:contentDescription="Plant Image" />
+
+</androidx.cardview.widget.CardView>
