--- a/app/src/main/res/layout/fragment_kalender.xml
+++ b/app/src/main/res/layout/fragment_kalender.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Kalender">
 
     <TextView
@@ -16,18 +18,32 @@
 
         />
 
-<!--    <CalendarView-->
-<!--        android:id="@+id/calendar_view"-->
-<!--        android:layout_marginHorizontal="20dp"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center" />-->
+    <!--    <CalendarView-->
+    <!--        android:id="@+id/calendar_view"-->
+    <!--        android:layout_marginHorizontal="20dp"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_gravity="center" />-->
 
     <com.applandeo.materialcalendarview.CalendarView
         android:id="@+id/calendar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        />
+        app:headerColor="@color/primary" />
 
-</FrameLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/nothing_to_do"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="20dp"
+            />
+    </RelativeLayout>
+
+
+</LinearLayout>
