--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,8 +13,10 @@
     <color name="dark_primary">#67864A</color>
     <color name="offwhite">#FCFAEE</color>
     <color name="black_neutral">#252525</color>
-    <color name="putih">#F5F5F5</color>
+    <color name="putih">#FFF</color>
     <color name="accent">#007AFF</color>
     <color name="red">#EE0D00</color>
+    <color name="gray">#808080</color>
+    <color name="gray_light">#D3D3D3</color>
 
 </resources>
