--- a/app/src/main/res/layout/fragment_plant_storage.xml
+++ b/app/src/main/res/layout/fragment_plant_storage.xml
@@ -31,4 +31,11 @@
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="50dp"
         android:backgroundTint="@color/dark_primary" />
+
+    <!-- FrameLayout untuk menampilkan fragment -->
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true" />
 </FrameLayout>
