--- a/app/src/main/res/layout/fragment_kalender.xml
+++ b/app/src/main/res/layout/fragment_kalender.xml
@@ -29,6 +29,15 @@
         app:selectionColor="@color/primary"
         app:todayLabelColor="@color/primary" />
 
+    <Button
+        android:id="@+id/btn_add_task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/primary"
+        android:text="@string/add_watering_task"
+        android:textColor="@color/putih"
+        android:layout_gravity="center" />
 
     <LinearLayout
         android:layout_width="match_parent"
