--- a/app/src/main/res/layout/item_plant_image.xml
+++ b/app/src/main/res/layout/item_plant_image.xml
@@ -1,20 +1,45 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardElevation="8dp"
-    app:cardCornerRadius="12dp"
-    android:layout_gravity="center">
+    app:cardCornerRadius="12dp">
 
-    <ImageView
-        android:id="@+id/plant_image"
-        android:layout_width="295dp"
-        android:layout_height="160dp"
-        android:layout_margin="10dp"
-        android:scaleType="centerCrop"
-        android:contentDescription="Plant Image" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/plant_image"
+            android:layout_width="295dp"
+            android:layout_height="160dp"
+            android:layout_margin="10dp"
+            android:scaleType="centerCrop"
+            android:contentDescription="Plant Image" />
+
+        <TextView
+            android:id="@+id/plant_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Plant Name"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:layout_margin="8dp"/>
+
+        <TextView
+            android:id="@+id/plant_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Description"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginBottom="8dp"/>
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
